# OpenGL

LearnOpenGl/: CMakeLists.txt
LearnOpenGl/libraries/glad/include/glad/: glad.h
LearnOpenGl/libraries/glad/src/: glad.c
